[gd_scene load_steps=3 format=3 uid="uid://uyc4bfmugxl0"]

[ext_resource type="Script" path="res://UI/pause_screen.gd" id="1_aofik"]
[ext_resource type="AudioStream" uid="uid://clfnbaxmq2v18" path="res://assets/audio/ui-cancel-sound.wav" id="3_mrdye"]

[node name="PauseScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aofik")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="PauseMenu" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(500, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -152.0
offset_right = 250.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10
alignment = 1
metadata/_edit_group_ = true

[node name="PauseLabel" type="Label" parent="PauseMenu"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 54
text = "paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrentScoreContainer" type="HBoxContainer" parent="PauseMenu"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="CurrentScoreLabel" type="Label" parent="PauseMenu/CurrentScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "current score:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrentScoreValue" type="Label" parent="PauseMenu/CurrentScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "0"

[node name="HighScoreContainer" type="HBoxContainer" parent="PauseMenu"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="HighScoreLabel" type="Label" parent="PauseMenu/HighScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "high score:"

[node name="HighScoreValue" type="Label" parent="PauseMenu/HighScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "0"

[node name="VSpace" type="Control" parent="PauseMenu"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ContinueButton" type="Button" parent="PauseMenu/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "continue"

[node name="RestartButton" type="Button" parent="PauseMenu/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "restart"

[node name="ReturnTitleButton" type="Button" parent="PauseMenu/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "return to title"

[node name="ConfirmRestart" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
offset_top = 250.0
offset_right = 1024.0
offset_bottom = 518.0
alignment = 1

[node name="ConfirmRestartLabel" type="Label" parent="ConfirmRestart"]
layout_mode = 2
theme_override_font_sizes/font_size = 44
text = "are you sure you want to restart?"
horizontal_alignment = 1

[node name="Control" type="Control" parent="ConfirmRestart"]
custom_minimum_size = Vector2(0, 27)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ConfirmRestart"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="YesButton" type="Button" parent="ConfirmRestart/HBoxContainer"]
custom_minimum_size = Vector2(100, 55)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "yes"

[node name="NoButton" type="Button" parent="ConfirmRestart/HBoxContainer"]
custom_minimum_size = Vector2(100, 55)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "no"

[node name="ConfirmTitleReturn" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
offset_top = 250.0
offset_right = 1024.0
offset_bottom = 518.0
alignment = 1

[node name="ConfirmTitleReturnLabel" type="Label" parent="ConfirmTitleReturn"]
layout_mode = 2
theme_override_font_sizes/font_size = 44
text = "are you sure you want to return
to the title screen?"
horizontal_alignment = 1

[node name="Control" type="Control" parent="ConfirmTitleReturn"]
custom_minimum_size = Vector2(0, 27)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ConfirmTitleReturn"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="YesButton" type="Button" parent="ConfirmTitleReturn/HBoxContainer"]
custom_minimum_size = Vector2(100, 55)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "yes"

[node name="NoButton" type="Button" parent="ConfirmTitleReturn/HBoxContainer"]
custom_minimum_size = Vector2(100, 55)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "no"

[node name="MenuSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_mrdye")
volume_db = -5.622

[connection signal="pressed" from="PauseMenu/Buttons/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="PauseMenu/Buttons/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PauseMenu/Buttons/ReturnTitleButton" to="." method="_on_return_title_button_pressed"]
[connection signal="pressed" from="ConfirmRestart/HBoxContainer/YesButton" to="." method="_on_confirm_restart_yes_button_pressed"]
[connection signal="pressed" from="ConfirmRestart/HBoxContainer/NoButton" to="." method="_on_confirm_restart_no_button_pressed"]
[connection signal="pressed" from="ConfirmTitleReturn/HBoxContainer/YesButton" to="." method="_on_confirm_title_yes_button_pressed"]
[connection signal="pressed" from="ConfirmTitleReturn/HBoxContainer/NoButton" to="." method="_on_confirm_title_no_button_pressed"]
